Add function for displaying date and time on main widget

--- a/src/ui/mainwidget.ui
+++ b/src/ui/mainwidget.ui
@@ -6,24 +6,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>291</width>
-    <height>116</height>
+    <width>162</width>
+    <height>84</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="labDate">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>30</y>
+     <x>20</x>
+     <y>50</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string notr="true">date</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labTime">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>20</y>
      <width>72</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>time</string>
    </property>
   </widget>
  </widget>
