Add layout and QSS styling fo ain widget

--- a/src/ui/mainwidget.ui
+++ b/src/ui/mainwidget.ui
@@ -13,32 +13,28 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="labDate">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>50</y>
-     <width>121</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string notr="true">date</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labTime">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>20</y>
-     <width>72</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>time</string>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="labTime">
+     <property name="text">
+      <string>time</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="labDate">
+     <property name="text">
+      <string notr="true">date</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
